--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,15 @@
 	<classpathentry kind="src" path="mp3"/>
 	<classpathentry kind="src" path="img"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="lib/jfoenix.jar"/>
 	<classpathentry kind="src" path="imgGallery"/>
+	<classpathentry kind="lib" path="lib/activation.jar"/>
+	<classpathentry kind="lib" path="lib/jfoenix.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.2.jar"/>
+	<classpathentry kind="lib" path="lib/webcam-capture-0.3.10.jar"/>
+	<classpathentry kind="lib" path="lib/commons-validator-1.6-sources.jar"/>
+	<classpathentry kind="lib" path="lib/commons-validator-1.6.jar"/>
+	<classpathentry kind="lib" path="lib/jesse.jar"/>
+	<classpathentry kind="lib" path="lib/mailer.jar"/>
+	<classpathentry kind="lib" path="lib/bridj-0.6.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
